--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev:": "parcel src/index.html src/styles/main.scss src/scripts/main.js --no-cache",
-    "build": "parcel build src/index.html --no-cache",
+    "dev": "parcel src/index.html src/styles/main.scss src/scripts/main.js --no-cache",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +12,9 @@
   "dependencies": {
     "parcel": "^2.12.0",
     "sass": "^1.72.0"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.12.0",
+    "sharp": "^0.31.3"
   }
 }
